--- a/style.css
+++ b/style.css
@@ -1,32 +1,20 @@
-div{
-    background-color: red;
-    width: 25%;
-    height: 400px;
-    margin: 10px;
-    display: inline-block;
-}
-row2{
-    background-color: blue;
-    width: 25%;
-    height: 400px;
-    margin: 10px;
-    display: inline-block;
-}
-row3{
-    background-color: green;
-    width: 25%;
-    height: 400px;
-    margin: 10px;
-    display: inline-block;
+td{
+    border: 2px solid black;
 }
 
-p{
-    width: 100%;
-    height: 2px;
+div{
+    background-color: white;
+    width: 15%;
+    height: 200px;
+    margin: 10px;
+    display: inline-block;
+    border: 2px solid black;
 }
 
 .blueBigBold{
-    color: blue;
-    font-size: 36px;
-    font-weight: 900;
+    object-fit: cover;
+    background-image: url(Transparent_X.png);
+    background-repeat: no-repeat, repeat;
+    background-color: white;
+
 }
