--- a/style.css
+++ b/style.css
@@ -1,14 +1,21 @@
-td{
-    border: 2px solid black;
-}
 
 div{
-    width: 15%;
     height: 200px;
+    width: 200px;
     margin: 10px;
-    display: inline-block;
     border: 2px solid black;
+    display: inline-block;
+
 }
 
 
 
+.ChangeThing {
+    background-image: url("X.png");
+    object-fit: fill;
+    background-repeat: no-repeat;
+}
+
+.Addpic{
+    background-image: url("X.png");
+}
